# WeChat

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  debug-agent-search-chain.md  debug-architect-endpoint.md  debug-web-search-failure.md  pyproject.toml
backend/app/: common.py  config.py  db.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/llm/: __init__.py  client_factory.py  endpoint_fallback.py  provider_aliases.py  registry.py  schemas.py  tool_loop.py  usage.py  validator.py
backend/app/routes/: agents.py  attachments.py  conversations.py  messages.py  model_configs.py  settings.py
backend/tests/: conftest.py  test_adapter_config_factory.py  test_adapter_tools.py  test_agents_api.py  test_api_key_encryption.py  test_attachments_api.py  test_boundary_conditions.py  test_chat_service_facade.py  test_chat_thinking_usage_contracts.py  test_conversations_api.py  test_error_response_compatibility.py  test_group_text_sanitizer.py  test_group_turn_runner.py  test_integration_frontend_flow.py  test_llm_config.py  test_llm_task2.py  test_messages_api.py  test_model_configs_api.py  test_phase2_5_deep_module.py  test_phase6_7_consistency.py  test_phase8_9_e2e_boundary.py  test_prompt_builder.py  test_protocol_boundaries.py  test_protocol_common.py  test_search_service.py  test_stream_errors.py  test_task1_model_contracts.py  test_tool_foundation_e2e.py  test_tool_loop.py  test_tool_middleware.py  test_tool_registry.py  test_tool_runtime_context.py  test_tool_spec.py  test_tool_validation.py  test_web_search_tool.py
(+91 files in other folders)
